# espresso-macos

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  entitlements.plist  espresso-gui.spec  espresso_gui_wrapper.py  pyproject.toml  requirements.txt
.github/workflows/: build-macos.yml  release.yml
docs/: AUDIO_FINGERPRINTING.md  AUDIO_SETUP.md  CODESIGNING.md  CODE_SIGNING.md  DEVELOPMENT.md  HOMEBREW_SETUP.md  QUICK_SETUP.md  SCREEN_MONITORING.md
espresso/: __init__.py  audio_fingerprint.py  audio_monitor.py  cli.py  core.py  gui.py  list_apps.py  list_audio.py  screen_monitor.py  utils.py
examples/: config-autostart.json  config-with-screen-monitoring.json  config.example.json
homebrew/: espresso.rb
tests/: test_audio.py  test_screen_debug.py
tools/: identify_sound.py  learn_sound.py  setup-autostart.sh  update_homebrew_tap.py
