[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "espresso-app"
version = "0.1.0"
description = "Keep your apps awake with a shot of activity"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Simon Lauger", email = "simon@lauger.name"}
]
keywords = ["espresso", "keepalive", "remote-desktop", "activity", "macos", "citrix", "teams"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
gui = ["rumps>=0.4.0"]
audio = [
    "sounddevice>=0.4.6",
    "numpy>=1.20.0"
]
full = [
    "rumps>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.20.0",
    "Pillow>=9.0.0",
    "pyobjc-framework-Quartz>=8.0",
    "pyobjc-framework-Vision>=8.0"
]
dev = [
    "pyinstaller>=5.0",
    "build",
    "twine"
]

[project.urls]
Homepage = "https://github.com/slauger/espresso-macos"
Repository = "https://github.com/slauger/espresso-macos"
Issues = "https://github.com/slauger/espresso-macos/issues"

[project.scripts]
espresso = "espresso.cli:main"
espresso-gui = "espresso.gui:main"
espresso-list = "espresso.list_apps:main"
espresso-list-audio = "espresso.list_audio:main"

[tool.setuptools]
packages = ["espresso"]

[tool.setuptools.package-data]
espresso = ["py.typed"]
"*" = ["icons/*.png"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install -e .[full]"
major_on_zero = false
tag_format = "v{version}"
commit_parser = "angular"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
